--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-component-library",
-  "version": "1.0.0",
-  "main": "build/index.js",
-  "module": "build/index.esm.js",
+  "name": "@respaces/respaces-ui",
+  "version": "0.0.1",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "files": [
-    "build"
+    "lib"
   ],
-  "types": "build/index.d.ts",
-  "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
+  "types": "lib/index.d.ts",
+  "description": "Respaces UI Library with Storybook, Rollup and Typescript",
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
@@ -38,7 +38,8 @@
   "homepage": "https://github.com/HarveyD/react-component-library#readme",
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -65,5 +66,8 @@
     "sass-loader": "^10.2.0",
     "ts-jest": "^26.5.6",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1"
   }
 }
